@@ -11,3 +11,12 @@ s="1234567"
 ? leftoflast$(s, "23")
 ? rightoflast$(s, "23")
 
+rem ------------------------------------
+rem REPLACE str argument can now be a number type
+a="1234"
+num=9
+b=replace(a, 2, num, 2)
+if (b!="194") then
+  throw "replace err"
+endif
+
